Fix LDAP-related crash in addressing widget of compose window (bug 81692).  r=ducarroz@netscape.com, sr=mscott@netscape.com, a=asa@mozilla.org